/*
 * This file is part of the RonDB REST API Server
 * Copyright (c) 2022 Hopsworks AB
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, version 3.
 *
 * This program is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 */

// TODO: Add comment why we're not using proto3
syntax = "proto2";
 
package grpcserver.v1;
 
option go_package = "./pkg/api";
option java_multiple_files = true;
option java_package = "com.rondb.grpcserver";
option java_outer_classname = "RonDBGrpcProto";

//________________________  Ping _________________________

message Empty {}

//__________________  PK Read Operation __________________

message FilterProto {
  required string Column = 1;
  required string Value = 2;
}

message ReadColumnProto {
  required string Column = 1;
  optional string DataReturnType = 2 [default="default"];
}

message PKReadRequestProto {
  required string DB = 1;
  required string Table = 2;
  repeated FilterProto Filters = 3;
  repeated ReadColumnProto ReadColumns = 4;
  optional string OperationID = 5;
}

message ColumnValueProto {
  optional string Name = 1;
}

message PKReadResponseProto {
  optional string OperationID = 1;
  optional int32 code = 2;
  map<string, ColumnValueProto> Data = 3;
}

//__________________  Batch Operation ________________________

message BatchRequestProto {
  repeated PKReadRequestProto operations = 1;
}

message BatchResponseProto {
  repeated PKReadResponseProto responses = 1;
}

//__________________  Stat Operation _________________________

message MemoryStatsProto {
  required int64 AllocationsCount = 1;
  required int64 DeallocationsCount = 2;
  required int64 BuffersCount = 3;
  required int64 FreeBuffers = 4;
}

message RonDBStatsProto {
  required int64 NdbObjectsCreationCount = 1;
  required int64 NdbObjectsDeletionCount = 2;
  required int64 NdbObjectsTotalCount = 3;
  required int64 NdbObjectsFreeCount = 4;
}

message StatRequestProto {}

message StatResponseProto {
  required MemoryStatsProto MemoryStats = 1;
  required RonDBStatsProto RonDBStats = 2;
}

// TODO Feature Store messages

// TODO: Rename service; REST is misleading
//__________________  Service ______________________________
service RonDBREST {
  rpc Ping(Empty) returns (Empty) {}
  rpc PKRead(PKReadRequestProto) returns (PKReadResponseProto);
  rpc Batch(BatchRequestProto) returns (BatchResponseProto);
  rpc Stat(StatRequestProto) returns (StatResponseProto);
  // TODO Feature Store RPCs
}
